slides from 1st week

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -1,14 +1,14 @@
 lessons:
   - date: "01/12/2020"
     title: "Introdução e Estrutura do Curso"
-    # slides: "01-introducao.html"
-    # lab: "01-introducao.R"
+    slides: "01-introducao.html"
+    lab: "01-introducao.R"
   - title: "PARTE I: Conceitos Básicos de R"
   - date: "03/12/2020"
     title: "Revisão de R: Importando dados"
-    # slides: "02-importando_dados.html"
-    # lab: "02-importando_dados.R"
-    # data: "extremedatasince1899.csv"
+    slides: "02-importando_dados.html"
+    lab: "02-importando_dados.R"
+    data: "extremedatasince1899.csv"
   - date: "08/12/2020"
     title: "Feriado (não teremos aula)"
   - date: "10/12/2020"
