1st class week #3

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -16,8 +16,8 @@ lessons:
     hw: "hw-01.html"
   - date: "15/12/2020"
     title: "Revisão de R: principais funções e operações"
-    # slides: "03-principais_funcoes.html"
-    # lab: "03-principais_funcoes.R"
+    slides: "03-principais_funcoes.html"
+    lab: "03-principais_funcoes.R"
   - date: "17/12/2020"
     title: "Revisão de R: outras funções"
     # slides: "04-outras_funcoes.html"
