--- a/config.toml
+++ b/config.toml
@@ -13,6 +13,7 @@ relativeurls = true
 publishDir = "public"
 ignoreFiles = [ "hw/resolucao/.*",  "\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
+enableEmoji = true
 
 [permalinks]
   post = "/:year/:month/:slug/"
