2ns class week #3

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -20,8 +20,8 @@ lessons:
     lab: "03-principais_funcoes.R"
   - date: "17/12/2020"
     title: "Revisão de R: outras funções"
-    # slides: "04-outras_funcoes.html"
-    # lab: "04-outras_funcoes.R"
+    slides: "04-outras_funcoes.html"
+    lab: "04-outras_funcoes.R"
     # hw: "hw-02.html"
   - date: "22 a 31/12/2020"
     title: "Recesso"
