--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -12,7 +12,7 @@ lessons:
   - date: "08/12/2020"
     title: "Feriado (não teremos aula)"
   - date: "10/12/2020"
-    title: "Aula Prática: Lista 1"
+    title: "Aula Prática: Lista 1 (entrega 12/12/2020)"
     hw: "hw-01.html"
   - date: "15/12/2020"
     title: "Revisão de R: principais funções e operações"
@@ -23,6 +23,8 @@ lessons:
     slides: "04-outras_funcoes.html"
     lab: "04-outras_funcoes.R"
     # hw: "hw-02.html"
+  - title: "Lista 2 (entrega 09/01/2021)"
+    hw: "hw-02.html"
   - date: "22 a 31/12/2020"
     title: "Recesso"
   - date: "05/01/2021"
