1st class week #4

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -29,8 +29,8 @@ lessons:
     title: "Recesso"
   - date: "05/01/2021"
     title: "Revisão de R: gráficos"
-    # slides: "05-graficos.html"
-    # lab: "05-graficos.R"
+    slides: "05-graficos.html"
+    lab: "05-graficos.R"
   - date: "07/01/2021"
     title: "Revisão de R: mais gráficos"
     # slides: "06-mais_graficos.html"
