2nd class week #4

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -33,8 +33,8 @@ lessons:
     lab: "05-graficos.R"
   - date: "07/01/2021"
     title: "Revisão de R: mais gráficos"
-    # slides: "06-mais_graficos.html"
-    # lab: "06-mais_graficos.R"
+    slides: "06-mais_graficos.html"
+    lab: "06-mais_graficos.R"
     # hw: "hw-03.html"
   - title: "PARTE II: Metodologias Estatísticas"
   - date: "12/01/2021"
