--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -36,15 +36,17 @@ lessons:
     slides: "06-mais_graficos.html"
     lab: "06-mais_graficos.R"
     # hw: "hw-03.html"
+  - title: "Lista 3 (entrega 20/01/2021)"
+    hw: "hw-03.html"
   - title: "PARTE II: Metodologias Estatísticas"
   - date: "12/01/2021"
     title: "Revisão de Estatística: principais distribuições"
-    # slides: "07-principais_distribuicoes.html"
-    # lab: "07-principais_distribuicoes.R"
+    slides: "07-principais_distribuicoes.html"
+    lab: "07-principais_distribuicoes.R"
   - date: "14/01/2021"
     title: "Revisão de Estatística: inferência"
-    # slides: "08-inferencia.html"
-    # lab: "08-inferencia.R"
+    slides: "08-inferencia.html"
+    lab: "08-inferencia.R"
   - date: "19/01/2021"
     title: "Revisão de Estatística: inferência"
     # slides: "09-inferencia_pt2.html"
