1st class week #6

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -49,8 +49,8 @@ lessons:
     lab: "08-inferencia.R"
   - date: "19/01/2021"
     title: "Revisão de Estatística: inferência"
-    # slides: "09-inferencia_pt2.html"
-    # lab: "09-inferencia_pt2.R"
+    slides: "09-inferencia_pt2.html"
+    lab: "09-inferencia_pt2.R"
   - date: "21/01/2021"
     title: "Revisão de Estatística: aprendizagem estatística"
     # slides: "10-aprendizagem_estatistica.html"
