1st class week #7

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -53,13 +53,15 @@ lessons:
     lab: "09-inferencia_pt2.R"
   - date: "21/01/2021"
     title: "Revisão de Estatística: aprendizagem estatística"
-    # slides: "10-aprendizagem_estatistica.html"
-    # lab: "10-aprendizagem_estatistica.R"
+    slides: "10-aprendizagem_estatistica.html"
+    lab: "10-aprendizagem_estatistica.R"
     # hw: "hw-04.html"
   - date: "26/01/2021"
     title: "Revisão de Estatística: aprendizagem estatística parte II"  
-    # slides: "11-aprendizagem_estatistica_pt2.html"
-    # lab: "11-aprendizagem_estatistica_pt2.R"
+    slides: "11-aprendizagem_estatistica_pt2.html"
+    lab: "11-aprendizagem_estatistica_pt2.R"
+  - title: "Lista 4 (entrega 30/01/2021)"
+    hw: "hw-04.html"
   - title: "PARTE III: Seguros de Vida"
   - date: "28/01/2021"
     title: "Seguros: matemática financeira"
