2nd class week #7

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -61,12 +61,13 @@ lessons:
     slides: "11-aprendizagem_estatistica_pt2.html"
     lab: "11-aprendizagem_estatistica_pt2.R"
   - title: "Lista 4 (entrega 30/01/2021)"
-    hw: "hw-04.html"
+    hw: "hw-04.html" 
   - title: "PARTE III: Seguros de Vida"
   - date: "28/01/2021"
     title: "Seguros: matemática financeira"
+    slides: "12-matematica_financeira.html"
     # slides: "12-matematica_financeiraFULL.html"
-    # lab: "12-matematica_financeira.R"
+    lab: "12-matematica_financeira.R"
   - date: "02/02/2021"
     title: "Seguros: tabelas de vida"
     # slides: "13-tabelas.html"
