1st class week #8

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -70,8 +70,8 @@ lessons:
     lab: "12-matematica_financeira.R"
   - date: "02/02/2021"
     title: "Seguros: tabelas de vida"
-    # slides: "13-tabelas.html"
-    # lab: "13-tabelas.R"
+    slides: "13-tabelas.html"
+    lab: "13-tabelas.R"
   - date: "04/02/2021"
     title: "Seguros: matemática atuarial"
     # slides: "14-precificacao.html"
