2nd class week #8

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -74,8 +74,8 @@ lessons:
     lab: "13-tabelas.R"
   - date: "04/02/2021"
     title: "Seguros: matemática atuarial"
-    # slides: "14-precificacao.html"
-    # lab: "14-precificacao.R"
+    slides: "14-precificacao.html"
+    lab: "14-precificacao.R"
   - date: "09/02/2021"
     title: "Seguros: reservas"
     # slides: "15-reservas.html"
