--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -78,8 +78,10 @@ lessons:
     lab: "14-precificacao.R"
   - date: "09/02/2021"
     title: "Seguros: reservas"
-    # slides: "15-reservas.html"
-    # lab: "15-reservas.R"
+    slides: "15-reservas.html"
+    lab: "15-reservas.R"
+  - title: "Lista 5 (entrega 18/02/2021)"
+    hw: "hw-05.html"
   - date: "11/02/2021"
     title: "Seguros: exercícios"
     # hw: "hw-05.html"
