--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -89,8 +89,8 @@ lessons:
     title: "Recesso (não teremos aula)"
   - date: "18/02/2021"
     title: "Seguros: mais cálculos"
-    # slides: "16-mais_seguros.html"
-    # lab: "16-mais_seguros.R"
+    slides: "16-mais_seguros.html"
+    lab: "16-mais_seguros.R"
   - date: "23/02/2021"
     title: "Seguros: exercícios"
     # hw: "hw-06.html"
