--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -91,6 +91,8 @@ lessons:
     title: "Seguros: mais cálculos"
     slides: "16-mais_seguros.html"
     lab: "16-mais_seguros.R"
+  - title: "Lista 6 (entrega 27/02/2021)"
+    hw: "hw-06.html"
   - date: "23/02/2021"
     title: "Seguros: exercícios"
     # hw: "hw-06.html"
