--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -98,9 +98,9 @@ lessons:
     # hw: "hw-06.html"
   - date: "25/02/2021"
     title: "Projeções (Prof. Bernardo Lanza)"
-    # slides: "17-projecoes/Lee-Cater.pdf"
-    # lab: "17-projecoes/"
-    # data: "17-projecoes/"
+    slides: "17-projecoes.pdf"
+    lab: "17-lee-carter_BLQ.R"
+    data: "SwedenF.txt"
   - title: "PARTE IV: Aplicações em Finanças e Ramo Não-Vida"
   - date: "02/03/2021"
     title: "Finanças: alocação de portfólios"
