--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -104,8 +104,8 @@ lessons:
   - title: "PARTE IV: Aplicações em Finanças e Ramo Não-Vida"
   - date: "02/03/2021"
     title: "Finanças: alocação de portfólios"
-    # slides: "18-portfolios.html"
-    # lab: "18-portfolios.R"
+    slides: "18-portfolios.html"
+    lab: "18-portfolios.R"
   - date: "04/03/2021"
     title: "Finanças: alocação de portfólios - pt 2"
     # slides: "19-portfolios_pt2.html"
