week #12 2nd class

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -108,9 +108,10 @@ lessons:
     lab: "18-portfolios.R"
   - date: "04/03/2021"
     title: "Finanças: alocação de portfólios - pt 2"
-    # slides: "19-portfolios_pt2.html"
-    # lab: "19-portfolios_pt2.R"
+    slides: "19-portfolios_pt2.html"
+    lab: "19-portfolios_pt2.R"
     # data: "NASDAQ/nasdaq.csv"
+    data: "nasdaq.csv"
   - date: "09/03/2021"
     title: "Ramo Não-Vida: modelos para tarifação"
     # slides: "20-tarifacao.html"
