--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -114,8 +114,8 @@ lessons:
     data: "nasdaq.csv"
   - date: "09/03/2021"
     title: "Ramo Não-Vida: modelos para tarifação"
-    # slides: "20-tarifacao.html"
-    # lab: "20-tarifacao.R"
+    slides: "20-tarifacao.html"
+    lab: "20-tarifacao.R"
   - date: "11/03/2021"
     title: "Ramo Não-Vida: modelos para tarifação - pt 2"
     # slides: "21-tarifacao_pt2.html"
