week #13 (2nd class), hw5 & 6 resol, final hw

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -118,8 +118,8 @@ lessons:
     lab: "20-tarifacao.R"
   - date: "11/03/2021"
     title: "Ramo Não-Vida: modelos para tarifação - pt 2"
-    # slides: "21-tarifacao_pt2.html"
-    # lab: "21-tarifacao_pt2.R"
+    slides: "21-tarifacao_pt2.html"
+    lab: "21-tarifacao_pt2.R"
   - date: "16/03/2021"
     title: "Ramo Não-Vida: métodos determinísticos para cálculo de reservas"
     # slides: "22-nao_vida_reservas.html"
@@ -133,6 +133,6 @@ lessons:
     # slides: "24-consideracoes_finais.html"
   - date: "25/03/2021"
     title: "Apresentação Trabalho Final"
-    # trabalho: "trabalho-final.html"
+    trabalho: "trabalho-final.html"
   - date: "30/03/2021"
     title: "Apresentação Trabalho Final"
