--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -122,12 +122,12 @@ lessons:
     lab: "21-tarifacao_pt2.R"
   - date: "16/03/2021"
     title: "Ramo Não-Vida: métodos determinísticos para cálculo de reservas"
-    # slides: "22-nao_vida_reservas.html"
-    # lab: "22-nao_vida_reservas.R"
+    slides: "22-nao_vida_reservas.html"
+    lab: "22-nao_vida_reservas.R"
   - date: "18/03/2021"
     title: "Ramo Não-Vida: métodos estocásticos para cálculo de reservas"
-    # slides: "23-nao_vida_reservas_pt2.html"
-    # lab: "23-nao_vida_reservas_pt2.R"
+    slides: "23-nao_vida_reservas_pt2.html"
+    lab: "23-nao_vida_reservas_pt2.R"
   - date: "23/03/2021"
     title: "Finalização do Trabalho"
     # slides: "24-consideracoes_finais.html"
