fixing schedule for last classes

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -129,10 +129,10 @@ lessons:
     slides: "23-nao_vida_reservas_pt2.html"
     lab: "23-nao_vida_reservas_pt2.R"
   - date: "23/03/2021"
-    title: "Finalização do Trabalho"
+    title: "Finalização do Trabalho (aula ao vivo)"
     # slides: "24-consideracoes_finais.html"
   - date: "25/03/2021"
-    title: "Apresentação Trabalho Final"
-    trabalho: "trabalho-final.html"
+    title: "Finalização do Trabalho (não teremos aula)"
   - date: "30/03/2021"
     title: "Apresentação Trabalho Final"
+    trabalho: "trabalho-final.html"
